--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -200,10 +200,10 @@ margin-bottom: 100px;
   }
  
   .container .h-habilidades .h-title-habilidades {
-   width: 100%;
-   height: 50px;
-   border-bottom: 2px solid #00E0FF;
-   border-bottom: 50px;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #00E0FF;
+    margin-bottom: 50px;
   }
  
   .container .h-habilidades .h-title-habilidades h2{
