--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -258,6 +258,7 @@ margin-bottom: 100px;
     width: 110px;
     height: 100%;
     border-radius: 6px;
+    border: 2px solid black;
     background-color: #00E0FF;
 }
 
@@ -265,6 +266,7 @@ margin-bottom: 100px;
     width: 150px;
     height: 100%;
     border-radius: 6px;
+    border: 2px solid black;
     background-color: #00E0FF;
 }
 
@@ -272,6 +274,7 @@ margin-bottom: 100px;
     width: 180px;
     height: 100%;
     border-radius: 6px;
+    border: 2px solid black;
     background-color: #00E0FF;
 }
 
@@ -279,6 +282,7 @@ margin-bottom: 100px;
     width: 200px;
     height: 100%;
     border-radius: 6px;
+    border: 2px solid black;
     background-color: #00E0FF;
 }
 
